# minifloat

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  minifloat.hpp  sanity.cpp  test.cpp
.github/workflows/: c-cpp.yml
